kubeadm/volumes.yml
apiVersion: v1
kind: Pod
metadata:
  name: capture
  labels:
    name: capture
spec:
  containers:
  - name: capture
    image: nginx:alpine
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
    volumeMounts:
      - name: capture
        mountPath: /usr/share/nginx/html
  volumes:
    - name: capture
      persistentVolumeClaim:
        claimName: capture
---
apiVersion: v1
kind: Service
metadata:
  name: capture
spec:
  type: NodePort
  selector:
    name: capture
  ports:
  - nodePort: 32223
    port: 80
    protocol: TCP
    targetPort: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: capture
#   labels:
#     name: capture
# spec:
#   rules:
#   - host: capture.nif.catchmedia.com
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: capture
#             port: 
#               number: 80
