kubeadm/dokuwiki_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki
  labels:
    name: wiki
spec:
  ingressClassName: nginx
  rules:
  - host: moose.nif.catchmedia.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wiki-dokuwiki
            port: 
              number: 80
