kubeadm/gitlab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
spec:
  selector:
    matchLabels:
      app-0: gitlab
  replicas: 1
  template:
    metadata:
      labels:
        app-0: gitlab
    spec:
      containers:
      - name: gitlab
        image: sameersbn/gitlab:8.16.3
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        ports:
        - name: http
          containerPort: 80
        - name: ssh
          containerPort: 22
        volumeMounts:
        - mountPath: /home/git/data
          name: data
        livenessProbe:
          httpGet:
            path: /users/sign_in
            port: 80
          initialDelaySeconds: 180
          timeoutSeconds: 15
        readinessProbe:
          httpGet:
            path: /users/sign_in
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 1
      volumes:
      - name: data
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-redis
spec:
  selector:
    matchLabels:
      app-1: gitlab-redis
  replicas: 1
  template:
    metadata:
      labels:
        app-1: gitlab-redis
    spec:
      containers:
      - name: redis
        image: redis:3.2.4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: redis
          containerPort: 6379
        volumeMounts:
        - mountPath: /var/lib/redis
          name: data
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: data
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-postgresql
spec:
  selector:
    matchLabels:
      app-2: gitlab-postgresql
  replicas: 1
  template:
    metadata:
      labels:
        app-2: gitlab-postgresql
    spec:
      containers:
      - name: postgresql
        image: sameersbn/postgresql:9.5-3
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: postgres
          containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: data
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - postgres
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - postgres
          initialDelaySeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  labels:
    app-0: gitlab
spec:
  type: LoadBalancer
  selector:
    app-0: gitlab
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: ssh
      port: 1022
      targetPort: ssh
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-redis
  labels:
    app-1: gitlab-redis
spec:
  selector:
    app-1: gitlab-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-postgresql
  labels:
    app-2: gitlab-postgresql
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    app-2: gitlab-postgresql
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  labels:
    app-0: gitlab
    name: gitlab
spec:
  ingressClassName: nginx
  rules:
  - host: findip.nif.catchmedia.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gitlab
            port: 
              number: 80
