kubeadm/seafile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile
  labels:
    app: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile
  template:
    metadata:
      labels:
        app: seafile
    spec:
      containers:
      - name: seafile
        image: "docker.io/seafileltd/seafile:6.3.4"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "256Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /shared
            name: seafile
      volumes:
      - name: seafile
        persistentVolumeClaim:
          claimName: seafile
---
kind: Service
apiVersion: v1
metadata:
  name: seafile
spec:
  selector:
    app: seafile
  ports:
  - name: seafile
    protocol: TCP
    port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seafile
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/client-body-buffer-size: 2G
spec:
  ingressClassName: nginx
  tls:
  - secretName: tls-seafile
    hosts:
    - capture.nif.catchmedia.com
  rules:
    - host: capture.nif.catchmedia.com
      http:
        paths:
        - backend:
            service:
              name: seafile
              port: 
                number: 80
          path: /
          pathType: Prefix
